--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
             border-radius: 50%;
         }
 
-        .btn-primary {
-            font-size: larger;
-            height: 6vh;
-            width: 55vh;
+       .btn-primary {
+            font-size: 150%;
+            height: 7vh;
+            width: 100%;
+            max-width: 500px;
+            margin-left: 0px ;
             display: block;
+            padding-bottom: 10px;
             text-decoration: none;
             background-color: #a56c44;
             border-color: #a56c44;
